Hemos usado react.lazy, protypes y aplicado un manifest con webpack

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
      <div id="app"></div>
+     <noscript>
+         <h2>Debes tener Javascript activado para que puedas ver esta pagina</h2>
+     </noscript>
 </body>
 </html>
